# particle-delay

./: .gitignore  CMakeLists.txt  JUCE  PARAMETER_GUIDE.md  README.md
Source/: ParticleLookAndFeel.cpp  ParticleLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/DSP/: CapturedHit.cpp  CapturedHit.h  DelayBuffer.cpp  DelayBuffer.h  DelaySync.h  EchoEvent.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h  TransientDetector.cpp  TransientDetector.h  WetFinisher.cpp  WetFinisher.h
Tests/: DspTest.cpp
